xml-node: Remove stray blank space

This had broken tests/xml.c.

Fallout from 61a7b231bd8b9d1b8d02dca120389e79d38b428d

https://bugzilla.gnome.org/show_bug.cgi?id=788960